welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
    			while(isFacingTrail() && !estSurBiscuit()){
                                           ^SlugSnail:10: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
				    if(isFacingTrail() && !estSurBiscuit()){
                                                    ^SlugSnail:11: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
				    		while (isFacingTrail() && !estSurBiscuit()){
                                                                    ^SlugSnail:20: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
				    		if(isFacingTrail() && !estSurBiscuit()){
                                                                ^SlugSnail:21: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
				    			while (isFacingTrail() && !estSurBiscuit()){
                                                                            ^