welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
 def hunt(c:Color) {
		while(!estFaceMur()){
    			while(isFacingTrail() && !estSurBiscuit()){
				    	avance();
				    	baisseBrosse();
				    	leveBrosse();
				    }
				    droite();
				    if(isFacingTrail() && !estSurBiscuit()){
				    		while (isFacingTrail() && !estSurBiscuit()){
				    		avance();
				    		baisseBrosse();
				    		leveBrosse();
				    		
				    		}
				    }
				    else {
				    		gauche();gauche();
				    		if(isFacingTrail() && !estSurBiscuit()){
				    			while (isFacingTrail() && !estSurBiscuit()){
				    				avance();
				    				baisseBrosse();
				  			  	leveBrosse();
				    				
				    			}
				    			
				    		}
				    }
				}
				prendBiscuit();
	
	
}

def isFacingTrail(c:Color):Boolean = {
	if(!estFaceMur()){
		avance();
	    if(getCouleurSol()== c){
	    	 recule();
	    	return true ;
	    }
	    else {
	    	recule();
	    	return false;
	    }

	}
	else {
		return false ;
	}
}


